# uciparser

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/uciparser/: uci.h
src/: uci.cpp
test/: CMakeLists.txt  uciinittest.cpp
